# dotfiles

./: Makefile  README.md  install.sh
alacritty/: alacritty.toml
alacritty/themes/: campbell.toml  papertheme.toml
fontconfig/: fonts.conf
gdb/: gdbinit
git/: gitconfig
nvim/: ginit.vim  init.lua  lazy-lock.json
nvim/lua/: base.lua  cmakecfg.lua  colors.lua  comment.lua  completion.lua  filetree.lua  hotkeys.lua  plugins.lua  splash.lua  statusbar.lua  terminal.lua  topbar.lua  ts.lua  tscope.lua
nvim/lua/plugins/: manager.lua
nvim/lua/plugins/specs/: colorscheme.lua  completion.lua  debug.lua  filetree.lua  layout.lua  linter.lua  lsp.lua  notifications.lua  project.lua  tabline.lua  tasks.lua  ui.lua
nvim/lua/plugins/specs/telescope/: init.lua
nvim/snippets/: c.snippets  cmake.snippets  cpp.snippets
nvim/templates/cpp-plain/: CMakeLists.txt
nvim/templates/cpp-plain/include/: pch.hpp
nvim/templates/cpp-plain/src/: CMakeLists.txt
zsh/: zshrc.local
